Simplify code to avoid optimization bug.  b=233497  r=ajschult sr=roc a=blizzard